--- a/src/header.css
+++ b/src/header.css
@@ -1,5 +1,5 @@
 header{
-    position: absolute;
+    position: fixed;
     top:0;
     z-index: 1;
     padding:0 2.5rem;
