--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,12 @@
     --subTextBlack:#4a525f;
     --borderColor:#D8D9D9;
 }
+body::-webkit-scrollbar{
+    display: none;
+}
 #root{
-    height: 100vh !important;
+    height: 100vh;
+    width: 100%;
     position:relative;
     display: flex;
     align-items: center;
@@ -52,6 +56,9 @@
     gap:1rem;
 }
 @media (max-width: 426px){
+    #root{
+        height: 100%;
+    }
     #root .mainContainer{
         justify-content: center;
     }
